--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,13 +13,15 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
+
     - name: Install uv
       uses: astral-sh/setup-uv@v4
       with:
         version: "latest"
-
-    - name: Set up Python
-      run: uv python install 3.12
 
     - name: Install dependencies
       run: uv sync --dev
