Fix CI: use 'uv pip install -e .[dev]' instead of 'uv sync --dev'

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
         version: "latest"
 
     - name: Install dependencies
-      run: uv sync --dev
+      run: uv pip install -e ".[dev]"
 
     - name: Run tests
       run: uv run pytest tests/ -v
