--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        uv sync --dev
+        uv pip install -e ".[dev]"
 
     - name: Run tests with coverage
       run: |
