--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,9 @@ jobs:
         version: "latest"
 
     - name: Install dependencies
-      run: uv pip install -e ".[dev]"
+      run: |
+        uv venv
+        uv pip install -e ".[dev]"
 
     - name: Run tests
       run: uv run pytest tests/ -v
