--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        uv venv
         uv pip install -e ".[dev]"
 
     - name: Run tests with coverage
